--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.1",
     "webpack-stream": "^5.1.0"
+  },
+  "dependencies": {
+    "hls.js": "^0.11.0"
   }
 }
