--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "vladislav.manakov@kelnik.ru",
   "license": "ISC",
   "devDependencies": {
+    "@types/hls.js": "^0.10.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
@@ -24,6 +25,8 @@
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.1",
     "nodemon": "^1.18.4",
+    "ts-loader": "^5.2.2",
+    "typescript": "^3.1.3",
     "webpack-stream": "^5.1.0"
   },
   "dependencies": {
