Добавляет readme к заданию по типизации

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "vladislav.manakov@kelnik.ru",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "github:types/npm-express",
     "@types/hls.js": "^0.10.2",
+    "@types/node": "^10.12.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
