--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "yandex home application",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon --exec ts-node -- ./server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "vladislav.manakov@kelnik.ru",
@@ -17,7 +17,9 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.24.6",
+    "connect-history-api-fallback": "^1.5.0",
     "express": "^4.16.4",
+    "express-history-api-fallback": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
