--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "gulp-notify": "^3.2.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.1",
+    "gulp-twig": "^1.2.0",
     "gulp-uglify": "^3.0.1",
     "nodemon": "^1.18.4",
     "ts-loader": "^5.2.2",
+    "twig-loader": "^0.4.1",
     "typescript": "^3.1.3",
     "webpack-stream": "^5.1.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "hls.js": "^0.11.0"
   }
 }
